:bug: Fix the logo alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -46,6 +46,9 @@ body {
         text-decoration: none;
         font-size: 17px;
         text-align: center;
+        &.logo{
+          padding-left: 0;
+        }
       }
       // Middle
       .connect {
